objects/Account.object
<CustomObject>
    <fields>
        <fullName>Asset_Size__c</fullName>
        <label>Asset Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Rating__c</fullName>
        <label>Bank Rating</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Commission__c</fullName>
        <label>Bonus/Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CIF_Number__c</fullName>
        <externalId>true</externalId>
        <label>CIF Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSiDP__ID_Number__c</fullName>
        <description>Records the identification number that the non-individual borrower is providing for the institution&apos;s customer identification verification (CIV) form. This field is used by document preparation integrations.</description>
        <inlineHelpText>Records the identification number that the non-individual borrower is providing for the institution&apos;s customer identification verification (CIV) form.</inlineHelpText>
        <label>ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSiDP__ID_Type__c</fullName>
        <description>Indicates the type of identification that the non-individual borrower is providing for the institution&apos;s customer identification verification (CIV) form. This field is used by document preparation integrations.</description>
        <inlineHelpText>Indicates the type of identification that the non-individual borrower is providing for the institution&apos;s customer identification verification (CIV) form.</inlineHelpText>
        <label>ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secretary of State</fullName>
                </value>
                <value>
                    <fullName>Articles of Incorporation</fullName>
                </value>
                <value>
                    <fullName>Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>Certificate of Existence</fullName>
                </value>
                <value>
                    <fullName>Certificate of Partnership</fullName>
                </value>
                <value>
                    <fullName>Registration of Partnership</fullName>
                </value>
                <value>
                    <fullName>Trust Agreement</fullName>
                </value>
                <value>
                    <fullName>IRS TIN Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSiDP__Limited_Liability_Management_Type__c</fullName>
        <description>This field is manually populated. It is used for document preparation. This field is used to indicate the management type of a Limited Liability Company.</description>
        <inlineHelpText>This field is used to indicate the management type of a Limited Liability Company.</inlineHelpText>
        <label>Limited Liability Management Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member Managed</fullName>
                </value>
                <value>
                    <fullName>Manager Managed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSiDP__Professional_LLC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually populated. It is used for document preparation. This field is used to indicate if a Limited Liability Company is professional or not.</description>
        <label>Professional LLC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capital_Hold_Amount__c</fullName>
        <label>Capital Hold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Companies_House_ID__c</fullName>
        <description>The ID from Companies House UK that identifies a relationship</description>
        <externalId>true</externalId>
        <label>Companies House ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Competitor_Relevance_Score__c</fullName>
        <inlineHelpText>How big of a competitor is this FI?</inlineHelpText>
        <label>Competitor Relevance Score</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connection Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for Contact Details Fields on Relationship</description>
        <label>Contact Details</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Since__c</fullName>
        <inlineHelpText>Date customer first opened accounts with our institution. Likely fed from a source system.</inlineHelpText>
        <label>Customer Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Organization__c</fullName>
        <label>Date of Organization</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Committed_Direct_Exposure__c</fullName>
        <label>Committed Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Committed_Indirect_Exposure__c</fullName>
        <label>Committed Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Proposed_Direct_Exposure__c</fullName>
        <label>Proposed Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Proposed_Indirect_Exposure__c</fullName>
        <label>Proposed Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Relationship_Direct_Exposure__c</fullName>
        <label>Relationship Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Relationship_Indirect_Exposure__c</fullName>
        <label>Relationship Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Do_you_regularly_receive_bonus__c</fullName>
        <description>This field is used in AIP mortgage process for EMEA region.</description>
        <label>Do you regularly receive bonus?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>This field is used in AIP mortgage process for EMEA region. This field captures the employer name of the applicant.</description>
        <label>Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <description>This field is used in AIP mortgage process for EMEA region. This is used to capture the employment status of the applicant.</description>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full-Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part Time</fullName>
                </value>
                <value>
                    <fullName>Self-Employed</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Receiving Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Total_Deposits__c</fullName>
        <inlineHelpText>Total Deposits</inlineHelpText>
        <label>Estimated Total Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exposure_Cap__c</fullName>
        <description>Used with Total Exposure to calculate Remaining Exposure.</description>
        <label>Exposure Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FI_Approved_for_Syndications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FI Approved for Syndications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Demo_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Demo Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Risks_Mitigants__c</fullName>
        <label>Key Risks/Mitigants</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Strengths__c</fullName>
        <label>Key Strengths</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLCLP__Primary_Borrower__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Borrower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLCLP__Primary_Expiration_Date__c</fullName>
        <label>Primary ID Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLCLP__Primary_ID_Type__c</fullName>
        <label>Primary ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Driver&apos;s License</fullName>
                </value>
                <value>
                    <fullName>U.S Military ID Card</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>U.S. Visa</fullName>
                </value>
                <value>
                    <fullName>Matricula Consular</fullName>
                </value>
                <value>
                    <fullName>Alien Registration Receipt Card</fullName>
                </value>
                <value>
                    <fullName>U.S. Permanent Resident Card</fullName>
                </value>
                <value>
                    <fullName>U.S. Temporary Resident Card</fullName>
                </value>
                <value>
                    <fullName>U.S. Employment Authorization Card</fullName>
                </value>
                <value>
                    <fullName>Secretary of State</fullName>
                </value>
                <value>
                    <fullName>Articles of Incorporation</fullName>
                </value>
                <value>
                    <fullName>Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>Certificate of Existence</fullName>
                </value>
                <value>
                    <fullName>Certificate of Partnership</fullName>
                </value>
                <value>
                    <fullName>Registration of Partnership</fullName>
                </value>
                <value>
                    <fullName>Trust Agreement</fullName>
                </value>
                <value>
                    <fullName>State Issued ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLCLP__Primary_Id_Number__c</fullName>
        <label>Primary ID Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLCLP__Primary_Issue_Date__c</fullName>
        <label>Primary ID Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLCLP__Primary_Issuing_State__c</fullName>
        <label>Primary ID Issuing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLCLP__Secondary_Expiration_Date__c</fullName>
        <label>Secondary ID Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLCLP__Secondary_ID_Issuing_State__c</fullName>
        <label>Secondary ID Issuing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remove Me!</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLCLP__Secondary_ID_Number__c</fullName>
        <label>Secondary ID Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLCLP__Secondary_ID_Type__c</fullName>
        <label>Secondary ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certificate of Naturalization</fullName>
                </value>
                <value>
                    <fullName>Certificate of Citizenship</fullName>
                </value>
                <value>
                    <fullName>Employer Identification Card</fullName>
                </value>
                <value>
                    <fullName>Utility Bill</fullName>
                </value>
                <value>
                    <fullName>Lease Agreement</fullName>
                </value>
                <value>
                    <fullName>Student ID Card</fullName>
                </value>
                <value>
                    <fullName>Firearm License</fullName>
                </value>
                <value>
                    <fullName>Insurance Policy</fullName>
                </value>
                <value>
                    <fullName>Social Security Card</fullName>
                </value>
                <value>
                    <fullName>IRS TIN Letter</fullName>
                </value>
                <value>
                    <fullName>Property Tax Bill</fullName>
                </value>
                <value>
                    <fullName>Birth Certificate</fullName>
                </value>
                <value>
                    <fullName>Medicaid/Medicare Card</fullName>
                </value>
                <value>
                    <fullName>Voter Registration Card</fullName>
                </value>
                <value>
                    <fullName>Marriage Certificate</fullName>
                </value>
                <value>
                    <fullName>Professional License</fullName>
                </value>
                <value>
                    <fullName>Vehicle Registration</fullName>
                </value>
                <value>
                    <fullName>Debt Card</fullName>
                </value>
                <value>
                    <fullName>Veterans Identification Card</fullName>
                </value>
                <value>
                    <fullName>Secretary of State</fullName>
                </value>
                <value>
                    <fullName>Articles of Incorporation</fullName>
                </value>
                <value>
                    <fullName>Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>Certificate of Existence</fullName>
                </value>
                <value>
                    <fullName>Certificate of Partnership</fullName>
                </value>
                <value>
                    <fullName>Registration of Partnership</fullName>
                </value>
                <value>
                    <fullName>Trust Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLCLP__Secondary_Issue_Date__c</fullName>
        <label>Secondary ID Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLCLP__State_of_Incorporation__c</fullName>
        <label>State of Incorporation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__AP_Stress_Index__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is the Associated Press Index for the Relationship or Account&apos;s county. Value for the Stress Index is entered by a user. It is specific to a per county basis (not generated).</description>
        <label>AP Stress Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Review__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This is a field hidden to users, but its data is generated and used for the interim financial doc request.</description>
        <label>Account Review</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ActionFlag__c</fullName>
        <description>This field is optional. The variable text facilitates trigger actions. For example, &quot;createinterim&quot; triggers the creation of an interim statement and inserts it into @AL DM.</description>
        <label>ActionFlag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify if a Relationship or Account is active. Select Yes or No from a picklist.</description>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Automated_Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to indicate if the Relationship or Account is signed up for Automated Financial System submission of interim financials. Checkbox used to indicate status.</description>
        <label>Automated Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Ledger_Balance__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the average amount (Currency) of the ledger balance for the Relationship/Account.</description>
        <label>Average Ledger Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Unavailable__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is also known as Average Float.</description>
        <label>Average Unavailable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Backup_Withholding_Exempt_Code__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. The code representing the party&apos;s reason for claiming exemption from backup withholding. The numeric codes are defined by the instructions contained within IRS Form W-9.</description>
        <inlineHelpText>The code representing the party&apos;s reason for claiming exemption from backup withholding. The numeric codes are defined by the instructions contained within IRS Form W-9.</inlineHelpText>
        <label>Backup Withholding Exempt Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IRA or qualifying 501(a) or 403(b)(7) account</fullName>
                </value>
                <value>
                    <fullName>U.S. agency or instrumentality</fullName>
                </value>
                <value>
                    <fullName>U.S. State, District, possession</fullName>
                </value>
                <value>
                    <fullName>Foreign government, agency or instrumentality</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>U.S. registered securities or commodities dealer</fullName>
                </value>
                <value>
                    <fullName>CFTC-registered futures commission merchant</fullName>
                </value>
                <value>
                    <fullName>Real Estate Investment Trust</fullName>
                </value>
                <value>
                    <fullName>Fegistered under Investment Company Act</fullName>
                </value>
                <value>
                    <fullName>Bank-operated 584(a) trust fund</fullName>
                </value>
                <value>
                    <fullName>Financial institution</fullName>
                </value>
                <value>
                    <fullName>Investment community nominee</fullName>
                </value>
                <value>
                    <fullName>Section 664 trust</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Backup_Withholding_Exempt_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. If true, the account holder has certified that they are exempt from backup withholding.</description>
        <inlineHelpText>If true the account holder has certified that he/she/it is exempt from backup withholding.</inlineHelpText>
        <label>Backup Withholding Exempt Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Backup_Withholding_N_A_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. If true, the holder whose tax identification number (TIN) was used for backup withholding purposes is certifying that they are not subject to backup withholding.</description>
        <inlineHelpText>If true the holder whose tax identification number (TIN) was used for backup withholding purposes is certifying that he/she/it is not subject to backup withholding.</inlineHelpText>
        <label>Backup Withholding N/A Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Address_County__c</fullName>
        <description>Users populate this optional text field with the county name for the billing address.</description>
        <label>Billing Address County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Booked Affiliated Exposure to this Relationship or Account.</description>
        <label>Booked Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Bot_Date__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. The date field is used to specify when the BOT should wake up.</description>
        <inlineHelpText>The field the BOT uses to pull when it&apos;s supposed to wake up</inlineHelpText>
        <label>Bot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Bot_RMI__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is used for the BOT webservice calls and is incremented there. Workflow is in place for the remainder of the function.</description>
        <label>Bot RMI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to look up to the Bank Branch in which this account is associated to.</description>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>